tdf#120168, adapt horizontal alignment based on text rotation

See §18.8.1 of Part1 of the XLSX spec.

Change-Id: Id1822e3d0ddaa0d19fa4e9adc7f469e6ef334ef1