sc/source/filter/oox/stylesbuffer.cxx
@@ -1115,10 +1115,22 @@ Alignment::Alignment( const WorkbookHelper& rHelper ) :
 
 void Alignment::importAlignment( const AttributeList& rAttribs )
 {
-    maModel.mnHorAlign     = rAttribs.getToken( XML_horizontal, XML_general );
     maModel.mnVerAlign     = rAttribs.getToken( XML_vertical, XML_bottom );
     maModel.mnTextDir      = rAttribs.getInteger( XML_readingOrder, OOX_XF_TEXTDIR_CONTEXT );
     maModel.mnRotation     = rAttribs.getInteger( XML_textRotation, OOX_XF_ROTATION_NONE );
+    sal_Int32 nDefaultHorAlign = XML_general;
+    if (maModel.mnRotation != OOX_XF_ROTATION_NONE)
+    {
+        if (maModel.mnRotation < 90 || maModel.mnRotation == 180)
+        {
+            nDefaultHorAlign = XML_left;
+        }
+        else
+        {
+            nDefaultHorAlign = XML_right;
+        }
+    }
+    maModel.mnHorAlign     = rAttribs.getToken( XML_horizontal, nDefaultHorAlign );
     maModel.mnIndent       = rAttribs.getInteger( XML_indent, OOX_XF_INDENT_NONE );
     maModel.mbWrapText     = rAttribs.getBool( XML_wrapText, false );
     maModel.mbShrink       = rAttribs.getBool( XML_shrinkToFit, false );
